CORE-8039 Add Brazilian-Portugese translated files to the 8.0 source code tree. reviewer RPuzikov

--- a/Account/App_LocalResources/AccountLandingPage.aspx.pt-br.resx
+++ b/Account/App_LocalResources/AccountLandingPage.aspx.pt-br.resx
@@ -184,6 +184,6 @@
     <value>Pagamento</value>
   </data>
   <data name="NO_DECISIONS_TEXT" xml:space="preserve">
-    <value>[pt-BR]No Transactions Found for the Current Interval</value>
+    <value>Nenhuma transação encontrada para o intervalo atual</value>
   </data>
 </root>
