--- a/Account/App_LocalResources/AddSystemUser.aspx.pt-br.resx
+++ b/Account/App_LocalResources/AddSystemUser.aspx.pt-br.resx
@@ -220,7 +220,7 @@
     <value>Resposta de segurança</value>
   </data>
   <data name="tbSecurityQuestionTextResource1.Label" xml:space="preserve">
-    <value>[pt-BR]Custom Security Question</value>
+    <value>Pergunta de segurança personalizada</value>
   </data>
   <data name="tbStartDateResource1.Label" xml:space="preserve">
     <value>Data de início da conta</value>
