--- a/App_LocalResources/ChangePassword.aspx.pt-br.resx
+++ b/App_LocalResources/ChangePassword.aspx.pt-br.resx
@@ -144,6 +144,6 @@
     <value>&lt;br /&gt;&lt;br /&gt;&lt;b&gt;OBS.:&lt;/b&gt; Como um Super Usuário, você deve alterar a entrada no ServerAccess em cada máquina e criptografá-la.</value>
   </data>
   <data name="lblIncorrectPasswordResource1.Text" xml:space="preserve">
-    <value>[pt-BR]Incorrect old password</value>
+    <value>Senha antiga incorreta</value>
   </data>
 </root>
