--- a/Quoting/App_LocalResources/QuoteList.aspx.pt-br.resx
+++ b/Quoting/App_LocalResources/QuoteList.aspx.pt-br.resx
@@ -178,6 +178,6 @@
     <value>Imposto total</value>
   </data>
   <data name="TEXT_ACTIONS" xml:space="preserve">
-    <value>[pt-BR]Actions</value>
+    <value>Ações</value>
   </data>
 </root>
