--- a/App_LocalResources/JavaScriptError.aspx.pt-br.resx
+++ b/App_LocalResources/JavaScriptError.aspx.pt-br.resx
@@ -118,9 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ERROR_TEXT" xml:space="preserve">
-    <value>[pt-BR]JavaScript is not enabled!</value>
+    <value>JavaScript não ativado!</value>
   </data>
   <data name="HOWTO_TEXT" xml:space="preserve">
-    <value>[pt-BR]How to enable JavaScript in your browser</value>
+    <value>Como ativar o JavaScript em seu navegador</value>
   </data>
 </root>
