CORE-8039 Add Brazilian-Portugese translated files to the 8.0 source code tree. reviewer RPuzikov

--- a/config/Localization/metratech.com/metratech.com_DisputeStatus_pt-br.xml
+++ b/config/Localization/metratech.com/metratech.com_DisputeStatus_pt-br.xml
@@ -12,7 +12,7 @@
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/DisputeStatus/DisputeStatus/PendingApproval</Name>
-      <Value>[pt-BR]PendingApproval</Value>
+      <Value>AprovaçãoPendente</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/DisputeStatus/DisputeStatus/Rejected</Name>
