--- a/config/Localization/Approvals/Approvals_gb.xml
+++ b/config/Localization/Approvals/Approvals_gb.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <mt_config>
-  <language_code>en-GB</language_code>
+  <language_code>gb</language_code>
   <locale_space name="Approvals">
     <locale_entry>
       <Name>Approvals/ChangeType/AccountUpdate</Name>
