CORE-7264 Quoting. ICB prices are not applied to Tiered UDRC priceable items
Added support of sign of condition For Tiered UDRC in ICBs for quote Request
Default rule not supported yet!!!

Reviewed by IPisanka

--- a/Quoting/App_LocalResources/CreateQuote.aspx.en-GB.resx
+++ b/Quoting/App_LocalResources/CreateQuote.aspx.en-GB.resx
@@ -312,4 +312,13 @@
   <data name="TEXT_ISGROUP_CHEKED" xml:space="preserve">
     <value>Corporate account for group subscription should be selected.</value>
   </data>
+  <data name="CONDITIONS" xml:space="preserve">
+    <value>Conditions</value>
+  </data>
+  <data name="CONDITION_SIGN" xml:space="preserve">
+    <value>Condition</value>
+  </data>
+  <data name="DEFAULT_RULE" xml:space="preserve">
+    <value>Default rule</value>
+  </data>
 </root>
