--- a/Quoting/App_LocalResources/CreateQuote.aspx.de.resx
+++ b/Quoting/App_LocalResources/CreateQuote.aspx.de.resx
@@ -312,4 +312,13 @@
   <data name="TEXT_ISGROUP_CHEKED" xml:space="preserve">
     <value>[DE]Corporate account for group subscription should be selected.</value>
   </data>
+  <data name="CONDITIONS" xml:space="preserve">
+    <value>[DE]Conditions</value>
+  </data>
+  <data name="CONDITION_SIGN" xml:space="preserve">
+    <value>[DE]Condition</value>
+  </data>
+  <data name="DEFAULT_RULE" xml:space="preserve">
+    <value>[DE]Default rule</value>
+  </data>
 </root>
