--- a/Quoting/App_LocalResources/CreateQuote.aspx.ja.resx
+++ b/Quoting/App_LocalResources/CreateQuote.aspx.ja.resx
@@ -312,4 +312,13 @@
   <data name="TEXT_ISGROUP_CHEKED" xml:space="preserve">
     <value>[JA]Corporate account for group subscription should be selected.</value>
   </data>
+  <data name="CONDITIONS" xml:space="preserve">
+    <value>[JA]Conditions</value>
+  </data>
+  <data name="CONDITION_SIGN" xml:space="preserve">
+    <value>[JA]Condition</value>
+  </data>
+  <data name="DEFAULT_RULE" xml:space="preserve">
+    <value>[JA]Default rule</value>
+  </data>
 </root>
