--- a/Quoting/App_LocalResources/CreateQuote.aspx.resx
+++ b/Quoting/App_LocalResources/CreateQuote.aspx.resx
@@ -184,7 +184,7 @@
     <value>Add ICB</value>
   </data>
   <data name="BASE_AMOUNT" xml:space="preserve">
-    <value>Base Amount</value>
+    <value>RC Base Amount</value>
   </data>
   <data name="ICB_GRID_TITLE" xml:space="preserve">
     <value>ICBs</value>
@@ -196,16 +196,16 @@
     <value>PI Name</value>
   </data>
   <data name="ICB_PI_GRID_TITLE" xml:space="preserve">
-    <value>Priсeable Items That Allows Custom Rates</value>
+    <value>Priсeable Items That Allow Custom Rates</value>
   </data>
   <data name="PRICE" xml:space="preserve">
     <value>Price</value>
   </data>
   <data name="UNIT_AMOUNT" xml:space="preserve">
-    <value>Unit Amount</value>
+    <value>RC Per-Unit Amount</value>
   </data>
   <data name="UNIT_VALUE" xml:space="preserve">
-    <value>Unit Value</value>
+    <value>Number Of Units</value>
   </data>
   <data name="ISGROUP.BoxLabel" xml:space="preserve">
     <value>Is Group Subscription</value>
@@ -311,5 +311,14 @@
   </data>
   <data name="TEXT_ISGROUP_CHEKED" xml:space="preserve">
     <value>Corporate account for group subscription should be selected.</value>
+  </data>
+  <data name="CONDITIONS" xml:space="preserve">
+    <value>Conditions</value>
+  </data>
+  <data name="CONDITION_SIGN" xml:space="preserve">
+    <value>Condition</value>
+  </data>
+  <data name="DEFAULT_RULE" xml:space="preserve">
+    <value>Default rule</value>
   </data>
 </root>
