CORE-7084 Payment type displays in English format on payment pages (French localization) - paymentData.Type value is retrieving from resources; - ACHAdd.aspx.cs was refactored - Resources in ReviewPayment.aspx was fixed - resourcekey was removed from ValidationSummary1 in ACHAdd.aspx Reviewer RPuzikov

--- a/Sites/MetraView/Payments/App_LocalResources/ReviewPayment.aspx.en-GB.resx
+++ b/Sites/MetraView/Payments/App_LocalResources/ReviewPayment.aspx.en-GB.resx
@@ -156,7 +156,7 @@
   <data name="Next.Text" xml:space="preserve">
     <value>Next</value>
   </data>
-  <data name="ReviewPayment" xml:space="preserve">
+  <data name="ReviewPayment.Text" xml:space="preserve">
     <value>Review Payment Information</value>
   </data>
 </root>
