--- a/Sites/MetraView/Payments/App_LocalResources/ReviewPayment.aspx.it.resx
+++ b/Sites/MetraView/Payments/App_LocalResources/ReviewPayment.aspx.it.resx
@@ -156,7 +156,7 @@
   <data name="Next.Text" xml:space="preserve">
     <value>Avanti</value>
   </data>
-  <data name="ReviewPayment" xml:space="preserve">
+  <data name="ReviewPayment.Text" xml:space="preserve">
     <value>Rivedi informazioni sui pagamenti</value>
   </data>
 </root>
