--- a/Sites/MetraView/Payments/App_LocalResources/ReviewPayment.aspx.resx
+++ b/Sites/MetraView/Payments/App_LocalResources/ReviewPayment.aspx.resx
@@ -156,7 +156,7 @@
   <data name="Next.Text" xml:space="preserve">
     <value>Next</value>
   </data>
-  <data name="ReviewPayment" xml:space="preserve">
+  <data name="ReviewPayment.Text" xml:space="preserve">
     <value>Review Payment Information</value>
   </data>
 </root>
