--- a/Adjustments/App_LocalResources/ViewCreditNotesIssued.aspx.ja.resx
+++ b/Adjustments/App_LocalResources/ViewCreditNotesIssued.aspx.ja.resx
@@ -165,4 +165,7 @@
   <data name="TEXT_STATUS_INFORMATION" xml:space="preserve">
     <value>[JA]Status Information</value>
   </data>
+  <data name="lblViewCreditNotesTitle.Text" xml:space="preserve">
+    <value>[JA]View Credit Notes Issued</value>
+  </data>    
 </root>
