--- a/App_GlobalResources/JSConsts.fr.resx
+++ b/App_GlobalResources/JSConsts.fr.resx
@@ -133,7 +133,7 @@
     <value>j/n/Y G:i:s</value>
   </data>
   <data name="DECIMAL_SEPARATOR" xml:space="preserve">
-    <value>.</value>
+    <value>,</value>
   </data>
   <data name="DUPLICATE" xml:space="preserve">
     <value>Copier</value>
@@ -1168,7 +1168,7 @@
     <value>Afficher</value>
   </data>
   <data name="TEXT_AMPWIZARD_HELP_EDIT_ACCOUNT_GROUP" xml:space="preserve">
-    <value></value>
+    <value />
   </data>
   <data name="TITLE_AMPWIZARD_DELETE_ACCOUNT_QUALIFICATION_CONFIRM" xml:space="preserve">
     <value>Supprimer la qualification de compte</value>
@@ -1295,5 +1295,5 @@
   </data>
   <data name="TEXT_NOWCAST_RIGHT_CLICK_FOR_OPTIONS" xml:space="preserve">
     <value>effectuez un clic droit pour afficher les options</value>
-  </data>  
+  </data>
 </root>
