--- a/App_GlobalResources/JSConsts.fr.resx
+++ b/App_GlobalResources/JSConsts.fr.resx
@@ -1296,4 +1296,7 @@
   <data name="TEXT_NOWCAST_RIGHT_CLICK_FOR_OPTIONS" xml:space="preserve">
     <value>effectuez un clic droit pour afficher les options</value>
   </data>  
+  <data name="TEXT_NO_DATA_FOR_GRAPH" xml:space="preserve">
+    <value>No data available</value>
+  </data>     
 </root>
