--- a/config/Localization/metratech.com/metratech.com_accountcreation_pt-br.xml
+++ b/config/Localization/metratech.com/metratech.com_accountcreation_pt-br.xml
@@ -424,7 +424,7 @@
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/accountcreation/TruncateOldSubscriptions</Name>
-      <Value>[pt-BR]TruncateOldSubscriptions</Value>
+      <Value>TruncarAssinaturasVelhos</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/accountcreation/usagecycletype</Name>
