--- a/Sites/MetraView/App_GlobalResources/Dashboard.ja.resx
+++ b/Sites/MetraView/App_GlobalResources/Dashboard.ja.resx
@@ -139,6 +139,6 @@
     <value>製品別の現在の利用状況</value>
   </data>
   <data name="TEXT_DECISION_INSTANCES" xml:space="preserve">
-    <value>[pt-BR]NowCast</value>
+    <value>NowCast</value>
   </data>
 </root>
