--- a/App_GlobalResources/Resource.fr.resx
+++ b/App_GlobalResources/Resource.fr.resx
@@ -646,9 +646,9 @@
     <value>Utiliser calcul taxe incluse standard</value>
   </data>
   <data name="TEXT_BILL_MESSAGE_ASSOCIATIONS" xml:space="preserve">
-    <value>[FR]Bill Message Associations</value>
+    <value>Association de messages pour facture</value>
   </data>
   <data name="TEXT_BILL_MESSAGES" xml:space="preserve">
-    <value>[FR]Bill Messages</value>
+    <value>Messages pour facture</value>
   </data>  
 </root>
