--- a/App_GlobalResources/Resource.pt-br.resx
+++ b/App_GlobalResources/Resource.pt-br.resx
@@ -244,7 +244,7 @@
     <value>Valor exibido</value>
   </data>
   <data name="TEXT_DISPLAY_AMOUNT_AS_STRING" xml:space="preserve">
-    <value>[pt-BR]DisplayAmountAsString</value>
+    <value>Mostrar valor como string</value>
   </data>
   <data name="TEXT_EDIT" xml:space="preserve">
     <value>Editar </value>
@@ -286,10 +286,10 @@
     <value>Id interno</value>
   </data>
   <data name="TEXT_IS_REQUIRED" xml:space="preserve">
-    <value>[pt-BR]IsRequired</value>
+    <value>É necessário</value>
   </data>
   <data name="TEXT_IS_SITE_DOWN_FOR_MAINTENANCE" xml:space="preserve">
-    <value>[pt-BR]IsSiteDownForMaintenance</value>
+    <value>Esta o site for a do ar para manutenção</value>
   </data>
   <data name="TEXT_IS_VISIBLE" xml:space="preserve">
     <value>está visível</value>
@@ -646,9 +646,9 @@
     <value>Usar cálculo padrão de imposto incluso</value>
   </data>
   <data name="TEXT_BILL_MESSAGE_ASSOCIATIONS" xml:space="preserve">
-    <value>[pt-BR]Bill Message Associations</value>
+    <value>Associações mensagems de conta</value>
   </data>
   <data name="TEXT_BILL_MESSAGES" xml:space="preserve">
-    <value>[pt-BR]Bill Messages</value>
+    <value>Mensagems de conta</value>
   </data>  
 </root>
