--- a/MetraOffer/AmpGui/App_LocalResources/AccountQualification.aspx.pt-br.resx
+++ b/MetraOffer/AmpGui/App_LocalResources/AccountQualification.aspx.pt-br.resx
@@ -118,51 +118,51 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="lblTitleResource1.Text" xml:space="preserve">
-    <value>[pt-BR]Account Qualification</value>
+    <value>Account Qualification</value>
   </data>
   <data name="PageResource1.Title" xml:space="preserve">
     <value>MetraNet</value>
   </data>
   <data name="lblAccountQualificationResource1.Text" xml:space="preserve">
-    <value>[pt-BR]On this page you define an Account Qualification for an account group.  An Account Qualification is a filter that includes or excludes certain accounts from consideration.</value>
+    <value>On this page you define an Account Qualification for an account group.  An Account Qualification is a filter that includes or excludes certain accounts from consideration.</value>
   </data>
   <data name="tbSourceFieldResource1.Label" xml:space="preserve">
-    <value>[pt-BR]Source Field</value>
+    <value>Source Field</value>
   </data>
   <data name="tbTableToIncludeResource1.Label" xml:space="preserve">
-    <value>[pt-BR]Table to Include</value>
+    <value>Table to Include</value>
   </data>
   <data name="tbMatchFieldResource1.Label" xml:space="preserve">
-    <value>[pt-BR]Match Field</value>
+    <value>Match Field</value>
   </data>
   <data name="tbOutputFieldResource1.Label" xml:space="preserve">
-    <value>[pt-BR]Output Field</value>
+    <value>Output Field</value>
   </data>
   <data name="tbIncludeFilterResource1.Label" xml:space="preserve">
-    <value>[pt-BR]Include Filter (SQL)</value>
+    <value>Include Filter (SQL)</value>
   </data>
   <data name="tbFilterResource1.Label" xml:space="preserve">
-    <value>[pt-BR]Filter (MVM script)</value>
+    <value>Filter (MVM script)</value>
   </data>
   <data name="ddModeResource1.Label" xml:space="preserve">
-    <value>[pt-BR]Mode</value>
+    <value>Mode</value>
   </data>
   <data name="TEXT_MODE_ENGINE_FILTER" xml:space="preserve">
-    <value>[pt-BR]Engine Filter</value>
+    <value>Engine Filter</value>
   </data>
   <data name="TEXT_MODE_APPEND_FIELDS" xml:space="preserve">
-    <value>[pt-BR]Append Fields</value>
+    <value>Append Fields</value>
   </data>
   <data name="TEXT_MODE_APPEND_ROWS" xml:space="preserve">
-    <value>[pt-BR]Append Rows</value>
+    <value>Append Rows</value>
   </data>
   <data name="TEXT_MODE_REPLACE_ROWS" xml:space="preserve">
-    <value>[pt-BR]Replace Rows</value>
+    <value>Replace Rows</value>
   </data>
   <data name="ViewFilterLabelResource.Text" xml:space="preserve">
-    <value>[pt-BR]Filter (MVM script):</value>
+    <value>Filter (MVM script):</value>
   </data>
   <data name="ViewIncludeFilterLabelResource.Text" xml:space="preserve">
-    <value>[pt-BR]Include Filter (SQL):</value>
+    <value>Include Filter (SQL):</value>
   </data>
 </root>
