--- a/MetraOffer/AmpGui/App_LocalResources/ActivateDecision.aspx.pt-br.resx
+++ b/MetraOffer/AmpGui/App_LocalResources/ActivateDecision.aspx.pt-br.resx
@@ -122,12 +122,12 @@
     <value>True</value>
   </data>
   <data name="lblTitleResource1.Text" xml:space="preserve">
-    <value>[pt-BR]Activation Results</value>
+    <value>Activation Results</value>
   </data>
   <data name="PageResource1.Title" xml:space="preserve">
-    <value>[pt-BR]MetraNet</value>
+    <value>MetraNet</value>
   </data>
   <data name="ErrorCheckFirstLabel.Text" xml:space="preserve">
-    <value>[pt-BR]You must do an Error Check before activating your Decision Type.</value>
+    <value>You must do an Error Check before activating your Decision Type.</value>
   </data>
 </root>
