--- a/MetraOffer/AmpGui/App_LocalResources/ChargeCreditDirective.aspx.pt-br.resx
+++ b/MetraOffer/AmpGui/App_LocalResources/ChargeCreditDirective.aspx.pt-br.resx
@@ -118,54 +118,54 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="lblDirectiveType.Text" xml:space="preserve">
-    <value>[pt-BR]What type of work will this directive do?</value>
+    <value>What type of work will this directive do?</value>
   </data>
   <data name="lblTitleResource1.Text" xml:space="preserve">
-    <value>[pt-BR]Charge/Credit: Directive</value>
+    <value>Charge/Credit: Directive</value>
   </data>
   <data name="rblFieldPopulation.Text" xml:space="preserve">
-    <value>[pt-BR]Field Population</value>
+    <value>Field Population</value>
   </data>
   <data name="rblProcedureExecution.Text" xml:space="preserve">
-    <value>[pt-BR]Procedure Execution</value>
+    <value>Procedure Execution</value>
   </data>
   <data name="rblTableInclusion.Text" xml:space="preserve">
-    <value>[pt-BR]Table Inclusion</value>
+    <value>Table Inclusion</value>
   </data>
   <data name="tbChargeCreditName.LabelSeparator" xml:space="preserve">
-    <value>[pt-BR]Charge/Credit:</value>
+    <value>Charge/Credit:</value>
   </data>
   <data name="tbDefaultValue.Label" xml:space="preserve">
-    <value>[pt-BR]Default Value</value>
+    <value>Default Value</value>
   </data>
   <data name="tbFieldName.Label" xml:space="preserve">
-    <value>[pt-BR]Field Name</value>
+    <value>Field Name</value>
   </data>
   <data name="tbFilter.Label" xml:space="preserve">
-    <value>[pt-BR]Condition for Execution</value>
+    <value>Condition for Execution</value>
   </data>
   <data name="tbIncludedFieldPrefix.Label" xml:space="preserve">
-    <value>[pt-BR]Included Field Prefix</value>
+    <value>Included Field Prefix</value>
   </data>
   <data name="tbIncludePredicate.Label" xml:space="preserve">
-    <value>[pt-BR]Include Predicate</value>
+    <value>Include Predicate</value>
   </data>
   <data name="tbIncludeTableName.Label" xml:space="preserve">
-    <value>[pt-BR]Include Table Name</value>
+    <value>Include Table Name</value>
   </data>
   <data name="tbMvmProcedure.Label" xml:space="preserve">
-    <value>[pt-BR]MVM Procedure</value>
+    <value>MVM Procedure</value>
   </data>
   <data name="tbPopulationString.Label" xml:space="preserve">
-    <value>[pt-BR]Population String</value>
+    <value>Population String</value>
   </data>
   <data name="tbProductView.Label" xml:space="preserve">
-    <value>[pt-BR]Product View</value>
+    <value>Product View</value>
   </data>
   <data name="tbSourceValue.Label" xml:space="preserve">
-    <value>[pt-BR]Source Value</value>
+    <value>Source Value</value>
   </data>
   <data name="tbTargetField.Label" xml:space="preserve">
-    <value>[pt-BR]Target Field</value>
+    <value>Target Field</value>
   </data>
 </root>
