--- a/MetraOffer/AmpGui/App_LocalResources/End.aspx.pt-br.resx
+++ b/MetraOffer/AmpGui/App_LocalResources/End.aspx.pt-br.resx
@@ -125,9 +125,9 @@
     <value>True</value>
   </data>
   <data name="lblTitleResource1.Text" xml:space="preserve">
-    <value>[pt-BR]End</value>
+    <value>End</value>
   </data>
   <data name="PageResource2.Title" xml:space="preserve">
-    <value>[pt-BR]MetraNet</value>
+    <value>MetraNet</value>
   </data>
 </root>
