CORE-8168 Remove not need text strings, [FR] and [pt-BR], from localization files - Some values with [FR] or [pt-BR] were translated. From rest of them this tags were removed - CORE-8184 (translate the rest of values) was created Reviewer YZapara
Conflicts:
	RMP/UI/MAM/default/localized/pt-BR/textlookup/LocalizedConst.xml

--- a/config/Localization/metratech.com/metratech.com_FileLandingService_pt-br.xml
+++ b/config/Localization/metratech.com/metratech.com_FileLandingService_pt-br.xml
@@ -184,7 +184,7 @@
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/FileLandingService/eRejectionReason/NoReason</Name>
-      <Value>NoReason</Value>
+      <Value>SemMotivo</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/FileLandingService/eRejectionReason/NOT_ENOUGH_FILES</Name>
