--- a/config/Localization/BusinessEntity/BusinessEntity_Core.BillMessages.BillMessage_pt-BR.xml
+++ b/config/Localization/BusinessEntity/BusinessEntity_Core.BillMessages.BillMessage_pt-BR.xml
@@ -20,7 +20,7 @@
     </locale_entry>
     <locale_entry>
       <Name>BusinessEntity/Core.BillMessages.BillMessage/Language/Label</Name>
-      <Value>[pt-BR]Language</Value>
+      <Value>Língua</Value>
     </locale_entry>
   </locale_space>
 </mt_config>
