--- a/App_GlobalResources/JSConsts.pt-br.resx
+++ b/App_GlobalResources/JSConsts.pt-br.resx
@@ -1297,6 +1297,6 @@
     <value>clique com o botão direito para opções</value>
   </data>  
   <data name="TEXT_NO_DATA_FOR_GRAPH" xml:space="preserve">
-    <value>No data available</value>
+    <value>Não há dados disponível</value>
   </data>     
 </root>
