--- a/Sites/MetraView/App_GlobalResources/SiteJSConsts.de.resx
+++ b/Sites/MetraView/App_GlobalResources/SiteJSConsts.de.resx
@@ -520,7 +520,7 @@
     <value>Eigenschaften</value>
   </data>
   <data name="TEXT_PRORATED_RECURRING_CHARGE_CREDIT_MESSAGE" xml:space="preserve">
-    <value>Ihnen wurde dieses Guthaben gewährt, weil sich die angemeldete Nutzung mit im Voraus abgebuchter regelmäßiger Gebühr in diesem Rechnungszeitraum geändert hat.&lt;BR&gt;&lt;BR&gt;Auf der vorigen Rechnung wurde Ihnen ein Betrag von [RCAmount] im Voraus berechnet. Sie haben die Leistung nur vom [RCIntervalStart] bis zum [RCIntervalEnd] in Anspruch genommen. Dieses Guthaben entspricht also der Differenz zwischen [ProratedIntervalStart] und [ProratedIntervalEnd]. Dies entspricht einem Zeitraum von [ProratedDays] Tagen.&lt;BR&gt;&lt;BR&gt;Die Berechnung des Guthabens erfolgte unter Zugrundelegung des Tagesbetrags von [ProratedDailyRate]. Der Tagesbetrag wurde berechnet, indem [RCAmount] durch die Anzahl der Tage im entsprechenden Zeitraum geteilt wurde. Der Zeitraum von [ProratedDays] Tagen wurde also mit [ProratedDailyRate] multipliziert, wodurch Ihnen ein Guthaben von [Amount] entstand.&lt;BR&gt;</value>
+    <value>Ihnen wurde dieses Guthaben gewährt, weil sich die angemeldete Nutzung mit im Voraus abgebuchter regelmäßiger Gebühr in diesem Rechnungszeitraum geändert hat.&lt;BR&gt;&lt;BR&gt;Auf der vorigen Rechnung wurde Ihnen ein Betrag von [RCAmount] im Voraus berechnet. Sie haben die Leistung nur vom [RCIntervalStart] bis zum [ProratedIntervalStartPreviousDay] in Anspruch genommen. Dieses Guthaben entspricht also der Differenz zwischen [ProratedIntervalStart] und [ProratedIntervalEnd]. Dies entspricht einem Zeitraum von [ProratedDays] Tagen.&lt;BR&gt;&lt;BR&gt;Die Berechnung des Guthabens erfolgte unter Zugrundelegung des Tagesbetrags von [ProratedDailyRate]. Der Tagesbetrag wurde berechnet, indem [RCAmount] durch die Anzahl der Tage im entsprechenden Zeitraum geteilt wurde. Der Zeitraum von [ProratedDays] Tagen wurde also mit [ProratedDailyRate] multipliziert, wodurch Ihnen ein Guthaben von [Amount] entstand.&lt;BR&gt;</value>
   </data>
   <data name="TEXT_PRORATED_RECURRING_CHARGE_MESSAGE" xml:space="preserve">
     <value>Diese Gebühr wurde anteilig berechnet.  Die anteilige Berechnung verringert die Höhe der Gebühren, da Ihnen nur die Anzahl von Tage berechnet werden, an denen Sie in einem bestimmten Rechnungszeitraum für eine Leistung angemeldet waren.&lt;BR&gt;&lt;BR&gt;Die Berechnung für dieses Produkt begann am [ProratedIntervalStart] und endete am [ProratedIntervalEnd].  Sie haben die Leistung also für [ProratedDays] Tage erhalten.  Ihre Gebühren für diesen Zeitraum wurden berechnet, indem der Tagesbetrag von [ProratedDailyRate] mit [ProratedDays] Tagen angemeldeter Nutzung multipliziert wurde.  Dies entspricht [Amount].  (Der Tagesbetrag von [ProratedDailyRate] wird berechnet, indem die Gebühr für den entsprechenden Zeitraum von [RCAmount] durch die Anzahl der Tage im Zeitraum geteilt wird.)&lt;BR&gt;</value>
@@ -695,6 +695,9 @@
   </data>              
   <data name="TEXT_MIDDLEINITIAL_VALIDATION_MESSAGE" xml:space="preserve">
     <value>[DE] Middle initial is invalid</value>
+  </data>
+  <data name="EXTJS_DATE_LONG_FORMAT" xml:space="preserve">
+    <value>n.j.Y G:i:s</value>
   </data>  
   <data name="TEXT_NOWCAST_REFRESH" xml:space="preserve">
     <value>[DE] Refresh</value>
