--- a/Templates/App_LocalResources/SelectSubscriptions.aspx.pt-br.resx
+++ b/Templates/App_LocalResources/SelectSubscriptions.aspx.pt-br.resx
@@ -183,4 +183,13 @@
   <data name="START_DATE" xml:space="preserve">
     <value>Data de início</value>
   </data>
+  <data name="EndDateResource1.Label" xml:space="preserve">
+    <value>Data Assinaturas Fim</value>
+  </data>
+  <data name="StartDateResource1.Label" xml:space="preserve">
+    <value>Assinaturas Data de Início</value>
+  </data>
+  <data name="SubscriptionSpanPanel.Text" xml:space="preserve">
+    <value>Assinatura Span</value>
+  </data>
 </root>
