--- a/Templates/App_LocalResources/SelectSubscriptions.aspx.resx
+++ b/Templates/App_LocalResources/SelectSubscriptions.aspx.resx
@@ -168,6 +168,15 @@
   <data name="lblSelectSubscriptionsResource1.Text" xml:space="preserve">
     <value>Select Subscriptions</value>
   </data>
+  <data name="SubscriptionSpanPanel.Text" xml:space="preserve">
+    <value>Subscription Span</value>
+  </data>
+  <data name="StartDateResource1.Label" xml:space="preserve">
+    <value>Subscriptions Start Date</value>
+  </data>
+  <data name="EndDateResource1.Label" xml:space="preserve">
+    <value>Subscriptions End Date</value>
+  </data>
   <data name="NAME" xml:space="preserve">
     <value>Name</value>
   </data>
