CORE-8091,CORE-8092: he value of a string resource DECIMAL_SEPARATOR has been adjusted for Portuguese locale. Reviewer: IPisanka

--- a/App_GlobalResources/JSConsts.pt-br.resx
+++ b/App_GlobalResources/JSConsts.pt-br.resx
@@ -133,7 +133,7 @@
     <value>j/n/Y G:i:s</value>
   </data>
   <data name="DECIMAL_SEPARATOR" xml:space="preserve">
-    <value>.</value>
+    <value>,</value>
   </data>
   <data name="DUPLICATE" xml:space="preserve">
     <value>Duplicar</value>
