--- a/Sites/MetraView/App_GlobalResources/Resource.fr.resx
+++ b/Sites/MetraView/App_GlobalResources/Resource.fr.resx
@@ -486,4 +486,10 @@
   <data name="TEXT_SITE" xml:space="preserve">
     <value>Site</value>
   </data>
+  <data name="TEXT_CHECKING" xml:space="preserve">
+    <value>Compte courant</value>
+  </data>
+  <data name="TEXT_SAVINGS" xml:space="preserve">
+    <value>Épargne</value>
+  </data>
 </root>
