--- a/Sites/MetraView/App_GlobalResources/Resource.ja.resx
+++ b/Sites/MetraView/App_GlobalResources/Resource.ja.resx
@@ -486,4 +486,10 @@
   <data name="TEXT_SITE" xml:space="preserve">
     <value>[JA]Site</value>
   </data>
+  <data name="TEXT_CHECKING" xml:space="preserve">
+    <value>当座預金</value>
+  </data>
+  <data name="TEXT_SAVINGS" xml:space="preserve">
+    <value>普通預金</value>
+  </data>
 </root>
