--- a/App_GlobalResources/Resource.en-GB.resx
+++ b/App_GlobalResources/Resource.en-GB.resx
@@ -650,5 +650,11 @@
   </data>
   <data name="TEXT_BILL_MESSAGES" xml:space="preserve">
     <value>Bill Messages</value>
-  </data>  
+  </data>
+  <data name="TEXT_CHECKING" xml:space="preserve">
+    <value>Checking</value>
+  </data>
+  <data name="TEXT_SAVINGS" xml:space="preserve">
+    <value>Savings</value>
+  </data>
 </root>
