--- a/App_GlobalResources/Resource.es.resx
+++ b/App_GlobalResources/Resource.es.resx
@@ -650,5 +650,11 @@
   </data>
   <data name="TEXT_BILL_MESSAGES" xml:space="preserve">
     <value>[ES]Bill Messages</value>
-  </data>  
+  </data>
+  <data name="TEXT_CHECKING" xml:space="preserve">
+    <value>Corriente</value>
+  </data>
+  <data name="TEXT_SAVINGS" xml:space="preserve">
+    <value>Ahorros</value>
+  </data>
 </root>
