--- a/App_GlobalResources/Resource.ja.resx
+++ b/App_GlobalResources/Resource.ja.resx
@@ -650,5 +650,11 @@
   </data>
   <data name="TEXT_BILL_MESSAGES" xml:space="preserve">
     <value>[JA]Bill Messages</value>
-  </data>  
+  </data>
+  <data name="TEXT_CHECKING" xml:space="preserve">
+    <value>当座預金</value>
+  </data>
+  <data name="TEXT_SAVINGS" xml:space="preserve">
+    <value>普通預金</value>
+  </data>
 </root>
