--- a/App_GlobalResources/Resource.pt-br.resx
+++ b/App_GlobalResources/Resource.pt-br.resx
@@ -650,5 +650,11 @@
   </data>
   <data name="TEXT_BILL_MESSAGES" xml:space="preserve">
     <value>Mensagems de conta</value>
-  </data>  
+  </data>
+  <data name="TEXT_CHECKING" xml:space="preserve">
+    <value>Conta Corrente</value>
+  </data>
+  <data name="TEXT_SAVINGS" xml:space="preserve">
+    <value>Poupança</value>
+  </data>
 </root>
