CORE-8159 EditRateTable is not displaying Amount correctly for decimal values Fix quotas in french resources Reviewer RPuzikov

--- a/App_GlobalResources/Resource.pt-br.resx
+++ b/App_GlobalResources/Resource.pt-br.resx
@@ -151,7 +151,7 @@
     <value>Ações</value>
   </data>
   <data name="TEXT_ADD" xml:space="preserve">
-    <value>[pt-BR]Add</value>
+    <value>Adicionar contas</value>
   </data>
   <data name="TEXT_ADD_BME" xml:space="preserve">
     <value>Adicionar</value>
