--- a/Sites/MetraView/Payments/App_LocalResources/PayFinal.aspx.fr.resx
+++ b/Sites/MetraView/Payments/App_LocalResources/PayFinal.aspx.fr.resx
@@ -150,7 +150,7 @@
   <data name="lcType.Label" xml:space="preserve">
     <value>Type de carte</value>
   </data>
-  <data name="PaymentConfirmation" xml:space="preserve">
+  <data name="PaymentConfirmation.Text" xml:space="preserve">
     <value>Confirmation de paiement</value>
   </data>
 </root>
