--- a/Sites/MetraView/Payments/App_LocalResources/PayFinal.aspx.it.resx
+++ b/Sites/MetraView/Payments/App_LocalResources/PayFinal.aspx.it.resx
@@ -150,7 +150,7 @@
   <data name="lcType.Label" xml:space="preserve">
     <value>Tipo di carta</value>
   </data>
-  <data name="PaymentConfirmation" xml:space="preserve">
+  <data name="PaymentConfirmation.Text" xml:space="preserve">
     <value>Conferma del pagamento</value>
   </data>
 </root>
