--- a/Sites/MetraView/Payments/App_LocalResources/PayFinal.aspx.pt-br.resx
+++ b/Sites/MetraView/Payments/App_LocalResources/PayFinal.aspx.pt-br.resx
@@ -150,7 +150,7 @@
   <data name="lcType.Label" xml:space="preserve">
     <value>Tipo de cartão</value>
   </data>
-  <data name="PaymentConfirmation" xml:space="preserve">
+  <data name="PaymentConfirmation.Text" xml:space="preserve">
     <value>Confirmação do pagamento</value>
   </data>
 </root>
