--- a/Sites/MetraView/Payments/App_LocalResources/PayFinal.aspx.resx
+++ b/Sites/MetraView/Payments/App_LocalResources/PayFinal.aspx.resx
@@ -150,7 +150,7 @@
   <data name="lcType.Label" xml:space="preserve">
     <value>Card Type</value>
   </data>
-  <data name="PaymentConfirmation" xml:space="preserve">
+  <data name="PaymentConfirmation.Text" xml:space="preserve">
     <value>Payment Confirmation</value>
   </data>
 </root>
