--- a/Quoting/App_LocalResources/CreateQuote.aspx.es-MX.resx
+++ b/Quoting/App_LocalResources/CreateQuote.aspx.es-MX.resx
@@ -228,8 +228,8 @@
   <data name="MTbtnCancelResource1.Text" xml:space="preserve">
     <value>[es-MX]Cancel</value>
   </data>
-  <data name="MTTitleCreateQuoteResource.Text" xml:space="preserve">
-    <value>[es-MX]Manage Quote</value>
+  <data name="TEXT_CREATE_QUOTE" xml:space="preserve">
+    <value>[es-MX]Create Quote</value>
   </data>
   <data name="REMOVE_ICB" xml:space="preserve">
     <value>[es-MX]Remove ICB</value>
@@ -320,5 +320,8 @@
   </data>
   <data name="DEFAULT_RULE" xml:space="preserve">
     <value>[es-MX]Default rule</value>
+  </data>
+  <data name="TEXT_MANAGE_QUOTE" xml:space="preserve">
+    <value>[es-MX]Manage Quote</value>
   </data>
 </root>
